tests/frontend/pass/array/cross_inv.act
constructor of A
interface constructor()

creates

  uint x := 100


constructor of B
interface constructor(address a)

pointers

  a |-> A

iff

  a.x < 3

creates

  uint[3] arr := [1,2,3]

invariants

  arr[a.x] >= 0
