tests/frontend/fail/array/out_of_bounds_returns.act
constructor of B
interface constructor()

creates

  int[2] a := [0,0]

behaviour f of B
interface f()


case a[0] < 0:

returns post(a[100])
